SUMMARY element: Enable focus with tabindex attribute.

<summary tabindex=N> should make it focusable. HTMLSummaryElement::
SupportsFocus() had a bug that it missed HTMLElement::SupportsFocus()
check.

Bug: 745305
Change-Id: I0eaf17614950d8946152e153db67bc47b8a364f4
Reviewed-on: https://chromium-review.googlesource.com/588207
Commit-Queue: Kent Tamura <tkent@chromium.org>
Reviewed-by: Takayoshi Kochi <kochi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490282}
Former-commit-id: 8b50c25a833f4cccaa3e22fb228e6e8c70690f5b